[gd_scene load_steps=5 format=3 uid="uid://joqhrqwtoqk4"]

[ext_resource type="Script" path="res://login_button.gd" id="1_7nw1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0eavi"]
bg_color = Color(0.0705882, 0.784314, 0.964706, 1)

[sub_resource type="Theme" id="Theme_nikc8"]

[sub_resource type="Theme" id="Theme_ppiux"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0eavi")

[node name="LoginContainer" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginButton" type="Button" parent="Background/LoginContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -25.0
offset_right = 256.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nikc8")
script = ExtResource("1_7nw1q")

[node name="Label" type="Label" parent="Background/LoginContainer/LoginButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "LOGIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginInputContainer" type="VBoxContainer" parent="Background/LoginContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -32.0
offset_right = 310.0
offset_bottom = 52.0
grow_vertical = 2

[node name="IDBox" type="LineEdit" parent="Background/LoginContainer/LoginInputContainer"]
layout_mode = 2
placeholder_text = "ID"

[node name="PassBox" type="LineEdit" parent="Background/LoginContainer/LoginInputContainer"]
layout_mode = 2
placeholder_text = "Heslo"

[node name="ErrLabel" type="Label" parent="Background/LoginContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_ppiux")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1
